pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constLexicalScope.pkl
class Foo {
  bar: String = "bar"
  const foo = new {
    _barr = bar
  }
}

foo: Foo = new {}
